[ci skip] Fix plot 543dec824bb6995498afa2d92e1151251a32fd27

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "88ff90f7",
+   "id": "4b351a5b",
    "metadata": {},
    "source": [
     "# Feature engineering for electricity load forecasting\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "159c9106",
+   "id": "81c97662",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "888a4f27",
+   "id": "012264fe",
    "metadata": {},
    "source": [
     "\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6474448",
+   "id": "285f470d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c027e1fc",
+   "id": "f94e4432",
    "metadata": {},
    "source": [
     "## Shared time range for all historical data sources\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "143137cd",
+   "id": "e8528ebf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4aaf3730",
+   "id": "d95ba763",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63c2adb4",
+   "id": "d964b0a1",
    "metadata": {},
    "source": [
     "\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57d8a2c0",
+   "id": "e2fcfc44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42b5d608",
+   "id": "0cb31044",
    "metadata": {},
    "source": [
     "\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d82ad83",
+   "id": "c5f34a56",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1ad5bb3",
+   "id": "c89d13e7",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daf08280",
+   "id": "3a8fd191",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9606043f",
+   "id": "c204a912",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "806870f0",
+   "id": "0ef935b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb24c03e",
+   "id": "409697e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5375f013",
+   "id": "6329d5e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8703ff8f",
+   "id": "db6eda7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38ed4720",
+   "id": "a5bc4282",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfa63e43",
+   "id": "d06100cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "325f3602",
+   "id": "13043d8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c3c9580",
+   "id": "b0625aac",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b571cdd",
+   "id": "504aea4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8bd086c",
+   "id": "a7a7d220",
    "metadata": {},
    "source": [
     "\n",
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e82e56c3",
+   "id": "60be8aea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e573ece9",
+   "id": "fd37c792",
    "metadata": {},
    "source": [
     "\n",
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51a27e94",
+   "id": "953d8315",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94aed594",
+   "id": "cedfb805",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65d7ebc3",
+   "id": "8f5f9a9b",
    "metadata": {},
    "source": [
     "\n",
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e244e8c8",
+   "id": "98c95369",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "571c43b0",
+   "id": "e62906f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "207b1efa",
+   "id": "025494c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb815a15",
+   "id": "8c8619c5",
    "metadata": {},
    "source": [
     "\n",
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "894dc40b",
+   "id": "47e86e51",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "949f26e6",
+   "id": "79707c4e",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72ac882f",
+   "id": "89ca8b88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "969e97f6",
+   "id": "83b06710",
    "metadata": {},
    "source": [
     "\n",
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44e931ab",
+   "id": "dcaaad31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d269980",
+   "id": "5fbc5353",
    "metadata": {},
    "source": [
     "\n",
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc434a88",
+   "id": "2411f94a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0c12eef",
+   "id": "6ee3f758",
    "metadata": {},
    "source": [
     "\n",
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44e1cde9",
+   "id": "937cd4b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db82596f",
+   "id": "699fdf23",
    "metadata": {},
    "source": [
     "\n",
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3629e35b",
+   "id": "27aed532",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a12b01d",
+   "id": "08772a7d",
    "metadata": {},
    "source": [
     "\n",
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "365b7ee1",
+   "id": "622b6ce0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "526b9c60",
+   "id": "60878443",
    "metadata": {},
    "source": [
     "\n",
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd0d63b0",
+   "id": "3533f74b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45cf7e98",
+   "id": "8f18cdf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46d97229",
+   "id": "7d02ce65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a440732f",
+   "id": "14ef28e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a48cd4d8",
+   "id": "d3994b38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfaf629e",
+   "id": "32137e41",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1291,7 +1291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ba22f5a",
+   "id": "cf028cfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1380,7 +1380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7549468c",
+   "id": "81dc4e4f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1516,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91efd302",
+   "id": "e5a9fddd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "248ed5d7",
+   "id": "6719a072",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1550,7 +1550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f578b6ff",
+   "id": "6048e86b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4b723f0",
+   "id": "fa43de57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1570,7 +1570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a98469df",
+   "id": "9fb8b44a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1591,7 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00c78b4c",
+   "id": "895d7847",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,7 +1607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50b57b16",
+   "id": "7501d974",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1633,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "680187ea",
+   "id": "b776f5c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1659,7 +1659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc3cd208",
+   "id": "1ebb5630",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1679,7 +1679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0b853cc",
+   "id": "589b0d83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1689,7 +1689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31ee3ba4",
+   "id": "21615220",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1709,7 +1709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c554f8cc",
+   "id": "5038e52c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1719,7 +1719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d55f99bb",
+   "id": "9117f763",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1731,7 +1731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11febecc",
+   "id": "0319acae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39435333",
+   "id": "4e2d0548",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1753,7 +1753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63f91ef1",
+   "id": "8d29d670",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1770,7 +1770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fe4c7d3",
+   "id": "4c8c18aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1786,7 +1786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5650e19",
+   "id": "b2c999bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1854,7 +1854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5dbed4c",
+   "id": "92f1d4fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1866,7 +1866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8784902d",
+   "id": "727e9e51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1877,7 +1877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac4beffb",
+   "id": "b2a0f01f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1913,7 +1913,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a8e72e3",
+   "id": "18677ec5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1923,7 +1923,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a53ebe67",
+   "id": "61fc62d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1968,7 +1968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "202dca9f",
+   "id": "3e9a11a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1984,7 +1984,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80b63ad0",
+   "id": "e1cd4abc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1996,7 +1996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf87845f",
+   "id": "4e2b592c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2008,7 +2008,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "453a0043",
+   "id": "10320f44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2019,7 +2019,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80c1dce2",
+   "id": "c3e1ea42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2035,7 +2035,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2612b3d8",
+   "id": "4fcb3445",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2045,7 +2045,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f55d45df",
+   "id": "aed0bd36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2090,7 +2090,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d882b63c",
+   "id": "3792c021",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2108,7 +2108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b3a96b7",
+   "id": "553be35c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2132,7 +2132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9206cfe6",
+   "id": "1bfa4b1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2159,7 +2159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cba5735",
+   "id": "c6e20172",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2169,7 +2169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9956e44",
+   "id": "3baa516a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2179,7 +2179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27378781",
+   "id": "68678a31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2189,7 +2189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea64fb9a",
+   "id": "3c5c5d86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2207,7 +2207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ada87270",
+   "id": "f896f453",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2225,7 +2225,7 @@
     "        x=\"prediction_time:T\",\n",
     "        y=\"quantile_05:Q\",\n",
     "        y2=\"quantile_95:Q\",\n",
-    "        color=altair.value(\"green\"),\n",
+    "        color=altair.value(\"lightgreen\"),\n",
     "    )\n",
     ")\n",
     "\n",
@@ -2236,7 +2236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a76be6e0",
+   "id": "3bb4a719",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2270,14 +2270,6 @@
     "axs[2].set_title(\"0.95 Quantile\")\n",
     "_ = fig.suptitle(\"GBRT Predictions for different quantiles\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b7005f6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
