--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e07641f2",
+   "id": "d0e9f7a6",
    "metadata": {},
    "source": [
     "# Feature engineering for electricity load forecasting\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aac49abf",
+   "id": "39239d52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6db00ea0",
+   "id": "62da665a",
    "metadata": {},
    "source": [
     "\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1236a7c8",
+   "id": "9dbf7bd5",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d0a0ce3",
+   "id": "ea1828a3",
    "metadata": {},
    "source": [
     "## Shared time range for all historical data sources\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9940d27a",
+   "id": "b2916842",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c822e0e0",
+   "id": "0b16de37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99004644",
+   "id": "bf40a90b",
    "metadata": {},
    "source": [
     "\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bad00dd",
+   "id": "85ed0380",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19a4d76b",
+   "id": "823ab7d8",
    "metadata": {},
    "source": [
     "\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "511cfb8c",
+   "id": "f58c73f4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "112a5a78",
+   "id": "27715c5d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5de492b7",
+   "id": "25d7a2e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a82ad7f",
+   "id": "f5a0413d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23af7a5c",
+   "id": "30306ecf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8147b9f0",
+   "id": "98ede4e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e084b1ca",
+   "id": "1b049e59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5835f66d",
+   "id": "582d4860",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24f56bbc",
+   "id": "062c08a3",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110c01aa",
+   "id": "e5528520",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96a8dea7",
+   "id": "3fb60230",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c2f8a86",
+   "id": "cd7aec4f",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6222d6ec",
+   "id": "abefd89a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d060b32",
+   "id": "57b694cd",
    "metadata": {},
    "source": [
     "\n",
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e548098f",
+   "id": "f13f665f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79491420",
+   "id": "e8b8be05",
    "metadata": {},
    "source": [
     "\n",
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c862b9b",
+   "id": "55ad328a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d758594c",
+   "id": "2f3e3f41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8812bd5",
+   "id": "faae063b",
    "metadata": {},
    "source": [
     "\n",
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3560be40",
+   "id": "0f82bdca",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c9c6c09",
+   "id": "5be0bba8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55e0d436",
+   "id": "665d77c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cd5c415",
+   "id": "f7e1051e",
    "metadata": {},
    "source": [
     "\n",
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5158ff11",
+   "id": "c60f6969",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a118524",
+   "id": "d2420161",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5966176",
+   "id": "323bdabd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2124e0f",
+   "id": "2813eb67",
    "metadata": {},
    "source": [
     "\n",
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40c09429",
+   "id": "6f8d8141",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "567d9986",
+   "id": "258a638c",
    "metadata": {},
    "source": [
     "\n",
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fe1a09d",
+   "id": "59e27f54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7af2a284",
+   "id": "84eee9ce",
    "metadata": {},
    "source": [
     "\n",
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f0a2fab",
+   "id": "5652c7e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06f3ccd8",
+   "id": "a254d8bd",
    "metadata": {},
    "source": [
     "\n",
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97f4c39f",
+   "id": "9d73e332",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b095669d",
+   "id": "e7823bd9",
    "metadata": {},
    "source": [
     "\n",
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c4d4ed3",
+   "id": "ff4012a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41e1abfe",
+   "id": "56dfe768",
    "metadata": {},
    "source": [
     "\n",
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fa7a8e7",
+   "id": "977839f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f009b553",
+   "id": "2f53fa2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d17755d1",
+   "id": "1b41bc7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b865f66e",
+   "id": "fa378060",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1a1365e",
+   "id": "fdce496b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6078f84f",
+   "id": "11c47a1f",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1291,7 +1291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cac0db3",
+   "id": "3ac138ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1380,7 +1380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db021e3f",
+   "id": "8d5126f2",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1516,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03fe07d6",
+   "id": "c9936e82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0efeb1ca",
+   "id": "52301629",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1550,7 +1550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd5d560a",
+   "id": "2dcbd918",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da0461dd",
+   "id": "48ab7255",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1570,7 +1570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90b67352",
+   "id": "1cce4bf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1591,7 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fda06aca",
+   "id": "fe26c407",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,7 +1607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38a5d74b",
+   "id": "951719f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1633,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "958545b0",
+   "id": "64f9dc28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1659,7 +1659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ddf788e",
+   "id": "9c1275da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1679,7 +1679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef15601d",
+   "id": "21ee0fac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1689,7 +1689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee75dbdd",
+   "id": "fce08c27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1709,7 +1709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ede5b33",
+   "id": "0403ade7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1719,7 +1719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7a63abf",
+   "id": "644b4608",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1731,7 +1731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f80f49f7",
+   "id": "e8b7f97f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd41a49e",
+   "id": "8f1be4a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1753,7 +1753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5be8c871",
+   "id": "1ef0b67b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1770,7 +1770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93269282",
+   "id": "1d26a231",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1786,7 +1786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34b995c2",
+   "id": "fc1bed29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1854,7 +1854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4da1ef6b",
+   "id": "d6e41645",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1866,7 +1866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37b83547",
+   "id": "3b73552e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1877,7 +1877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d95131ef",
+   "id": "70633c9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1913,7 +1913,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "552b5c23",
+   "id": "b8f032c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1923,7 +1923,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3241da3d",
+   "id": "79fd9dda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1968,7 +1968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "842c1c98",
+   "id": "e0d11d0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1984,7 +1984,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "650abdb9",
+   "id": "08ac8b7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1996,7 +1996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95479763",
+   "id": "2366761f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2008,7 +2008,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e9cd351",
+   "id": "34e8466e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2019,7 +2019,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19a08ad0",
+   "id": "6f657431",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2035,7 +2035,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b05274c0",
+   "id": "14f987a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2045,7 +2045,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d6eaa94",
+   "id": "33df51c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2090,7 +2090,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fcf1874",
+   "id": "f8ff8bfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2108,7 +2108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07ee3212",
+   "id": "cca51103",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2132,7 +2132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddfca206",
+   "id": "b7d87f4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2159,7 +2159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1344284",
+   "id": "f47e1000",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2169,7 +2169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53aa4ded",
+   "id": "e75d9378",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2179,7 +2179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ecba9bf",
+   "id": "c12d75ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2189,7 +2189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16655ea0",
+   "id": "a30d2224",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2207,7 +2207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e5a14ce",
+   "id": "8afa78d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2225,7 +2225,7 @@
     "        x=\"prediction_time:T\",\n",
     "        y=\"quantile_05:Q\",\n",
     "        y2=\"quantile_95:Q\",\n",
-    "        color=altair.value(\"green\"),\n",
+    "        color=altair.value(\"lightgreen\"),\n",
     "    )\n",
     ")\n",
     "\n",
@@ -2236,7 +2236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "823f1ec1",
+   "id": "e11d9e02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2270,14 +2270,6 @@
     "axs[2].set_title(\"0.95 Quantile\")\n",
     "_ = fig.suptitle(\"GBRT Predictions for different quantiles\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dcb6eb9f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
